// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-sandbox builds a sandbox from a package with deps 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {
    "dep-0.1.0" => Object {
      "buildCommand": Array [],
      "buildType": "out-of-source",
      "dependencies": Map {},
      "errors": Array [],
      "exportedEnv": Object {},
      "id": "dep-0.1.0",
      "idInfo": Object {
        "dependencies": Array [],
        "env": Array [
          Object {
            "builtIn": true,
            "exclusive": false,
            "name": "PATH",
            "origin": null,
            "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
          },
          Object {
            "builtIn": true,
            "exclusive": false,
            "name": "SHELL",
            "origin": null,
            "value": "env -i /bin/bash --norc --noprofile",
          },
        ],
        "manifest": Object {
          "esy": Object {
            "build": Array [],
            "buildsInSource": false,
            "exportedEnv": Object {},
            "install": Array [],
            "release": Object {},
            "sandboxType": "project",
          },
          "name": "dep",
          "version": "0.1.0",
        },
        "source": "dep",
      },
      "installCommand": Array [],
      "name": "dep",
      "packagePath": "node_modules/dep",
      "sourcePath": "node_modules/dep",
      "sourceType": "immutable",
      "version": "0.1.0",
    },
  },
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [
      "dep-0.1.0",
    ],
    "env": Array [
      Object {
        "builtIn": true,
        "exclusive": false,
        "name": "PATH",
        "origin": null,
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      Object {
        "builtIn": true,
        "exclusive": false,
        "name": "SHELL",
        "origin": null,
        "value": "env -i /bin/bash --norc --noprofile",
      },
    ],
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "release": Object {},
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox builds a sandbox from a single package 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {},
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [],
    "env": Array [
      Object {
        "builtIn": true,
        "exclusive": false,
        "name": "PATH",
        "origin": null,
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      Object {
        "builtIn": true,
        "exclusive": false,
        "name": "SHELL",
        "origin": null,
        "value": "env -i /bin/bash --norc --noprofile",
      },
    ],
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "release": Object {},
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox error: circular deps 1`] = `
Array [
  Object {
    "origin": null,
    "reason": "Circular dependency \\"app\\" found
  At app -> dep",
  },
]
`;

exports[`build-sandbox error: missing a dep 1`] = `
Array [
  Object {
    "origin": null,
    "reason": "Cannot resolve \\"dep\\" packages
  At app
  Did you forget to run \\"esy install\\" command?",
  },
]
`;
